--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "netlify deploy --prod",
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "kajal jha",
-  "license": "ISC",
-  "engines": {
-    "node": "16.4.0git "
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -18,6 +14,12 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.13.2",
-    "validator": "^13.6.0"
-  }
+    "validator": "^13.6.0",
+    "netlify-cli": "^12.7.2",
+    "netlify-lambda": "^2.0.15",
+    "serverless-http": "^2.7.0"
+  },
+  "keywords": [],
+  "author": "Aayush Sharma",
+  "license": "ISC"
 }
