--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "bson": "^5.2.0",
     "body-parser": "^1.19.0",
+    "bson": "^5.2.0",
     "ejs": "^3.1.6",
+    "emailjs": "^4.0.3",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.13.2",
-    "validator": "^13.6.0",
     "netlify-cli": "^12.7.2",
     "netlify-lambda": "^2.0.15",
-    "serverless-http": "^2.7.0"
+    "nodemailer": "^6.9.5",
+    "serverless-http": "^2.7.0",
+    "validator": "^13.6.0"
   },
   "keywords": [],
   "author": "Aayush Sharma",
