--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "basicbank",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "build": "netlify deploy --prod",
     "start": "node app.js",
